all method fix
